--- a/views/room.ejs
+++ b/views/room.ejs
@@ -3,9 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="stylesheet.css">
   <title>African Health Store</title>
+  
+  <script>
+    const roomId = "<%= roomId %>";
+  </script>
 </head>
 <body>
-  Hello Africa, let's work on our medical services to save our lives!
+  /*Hello Africa, let's work on our medical services to save our lives!*/
+  <div id="video-grid"></div>
+  <script src="script.js"></script>
 </body>
 </html>
