--- a/views/room.ejs
+++ b/views/room.ejs
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="stylesheet.css">
   <script src="/socket.io/socket.io.js"></script>
   <title>African Health Store</title>
@@ -13,7 +14,27 @@
   </script>
 </head>
 <body>
-  /*Hello Africa, let's work on our medical services to save our lives!*/
+  <nav>
+    <div class="logo">
+      <h4>African Health Store</h4>
+    </div>
+    <ul class="nav-links">
+      <li><a href ="#"> Home </a></li>
+      <li><a href ="#"> Solutions </a></li>
+      <li><a href ="#"> Products</a></li>
+      <li><a href ="#"> About </a></li>
+      <li><a href ="#"> Contact </a></li>
+      <li><a href ="#"> Pricing </a></li>
+      <li><a href ="#"> Work </a></li>
+      <li><a href ="#"> Project </a></li>
+    </ul>
+    <div class="burger">
+      <div class="line1"></div>
+      <div class="line1"></div>
+      <div class="line1"></div>
+    </div>
+  </nav>
+  
   <div id="video-grid"></div>
   <script src="script.js"></script>
 </body>
