Added Responsive Navigation Bar

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -24,14 +24,14 @@
       <li><a href ="#"> Products</a></li>
       <li><a href ="#"> About </a></li>
       <li><a href ="#"> Contact </a></li>
-      <li><a href ="#"> Pricing </a></li>
-      <li><a href ="#"> Work </a></li>
+      <!--<li><a href ="#"> Pricing </a></li>
+      <li><a href ="#"> Work </a></li> -->
       <li><a href ="#"> Project </a></li>
     </ul>
     <div class="burger">
       <div class="line1"></div>
-      <div class="line1"></div>
-      <div class="line1"></div>
+      <div class="line2"></div>
+      <div class="line3"></div>
     </div>
   </nav>
   
