--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -1,6 +1,6 @@
 * {
   margin: 0px;
-  padding: 0px;
+  padding: 0 px;
   box-sizing: border-box;
 }
 nav {
@@ -20,7 +20,7 @@ nav {
 .nav-links {
   display: flex;
   justify-content: space-around;
-  width: 40%;
+  width: 50%;
 }
 .nav-links li {
   list-style: none;
@@ -31,6 +31,7 @@ nav {
   letter-spacing: 3px;
   font-weight: bold;
   font-size: 14px;
+  text-transform: uppercase;
 }
 .burger {
   display: none;
