--- a/views/room.ejs
+++ b/views/room.ejs
@@ -6,6 +6,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="stylesheet.css">
   <script src="/socket.io/socket.io.js"></script>
+  <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
   <title>African Health Store</title>
   
   <script>
@@ -24,9 +25,7 @@
       <li><a href ="#"> Products</a></li>
       <li><a href ="#"> About </a></li>
       <li><a href ="#"> Contact </a></li>
-      <!--<li><a href ="#"> Pricing </a></li>
-      <li><a href ="#"> Work </a></li> -->
-      <li><a href ="#"> Project </a></li>
+      <li><a href ="#"> Projects </a></li>
     </ul>
     <div class="burger">
       <div class="line1"></div>
@@ -37,5 +36,6 @@
   
   <div id="video-grid"></div>
   <script src="script.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
