--- a/views/room.ejs
+++ b/views/room.ejs
@@ -31,7 +31,7 @@
     <nav>
         <div class="logo">
             <h4> <a class="navbar-brand px-0 mx-0" href="room.ejs">
-                <span style="color:#CC0001;text-shadow: 2px 2px 4px rgba(0,0,0,0.3);" ><img class="logo" src="images/image.png" alt="African Health Store"> </span>
+                <span style="color:#CC0001;text-shadow: 2px 2px 4px rgba(0,0,0,0.3);" ><img class="logo" src="images/image.png" alt=""> </span>
                 </a>African Health Store</h4>
     
         </div>
