--- a/views/room.ejs
+++ b/views/room.ejs
@@ -59,11 +59,11 @@
             </div>
             <div class="main__controls">
                 <div class="main__controls__block">
-                    <div class="main__controls__button">
+                    <div onclick="muteUnmute()" class="main__controls__button main__mute_button">
                         <em class="fas fa-microphone"></em>
                         <span>Mute</span>
                     </div>
-                    <div class="main__controls__button">
+                    <div onclick="playStop()" class="main__controls__button main__video_button" >
                         <em class="fas fa-video"></em>
                         <span>Stop Video</span>
                     </div>
