--- a/views/room.ejs
+++ b/views/room.ejs
@@ -21,7 +21,8 @@
     }
     
     </script>
-  <title>African Health Store</title>
+    
+    <title>African Health Store</title>
   
   <script>
     const ROOM_ID = "<%= roomId %>";
@@ -36,6 +37,7 @@
     
         </div>
         <ul class="nav-links">
+            <em class="fas fa-home"></em>
           <li><a href ="room.ejs"> Home </a></li>
           <li><a href ="solutions.ejs"> Solutions </a></li>
           <li><a href ="products.ejs"> Products</a></li>
