--- a/views/room.ejs
+++ b/views/room.ejs
@@ -32,8 +32,9 @@
     <nav>
         <div class="logo">
             <h4> <a class="navbar-brand px-0 mx-0" href="room.ejs">
-                <span style="color:#CC0001;text-shadow: 2px 2px 4px rgba(0,0,0,0.3);" ><img class="logo" src="images/image.png" alt=""> </span>
-                </a>African Health Store</h4>
+                <span style="color:#CC0001;text-shadow: 2px 2px 4px rgba(0,0,0,0.3);" >
+                    <img src="images/image.jpg" alt="African Health Store" class="logo">
+                </a></h4>
     
         </div>
         <ul class="nav-links">
@@ -86,7 +87,7 @@
                  </div>
                  <div class="main__controls__block">
                     <div class="main__controls__button">
-                       <span class="leave_meeting">Leave Meeting</span>
+                       <span class="leave_meeting">Leave Conference Meeting</span>
                     </div>
                  </div>
               </div>
@@ -95,7 +96,6 @@
             <div class="main__header">
                 <h6>Chat</h6>
             </div>
-        </div>
             <div class="main__chat_window">
                 <ul class="messages">
                    
@@ -106,7 +106,7 @@
                 <input id="chat_message" type="text" placeholder="Type message here...">
              </div>
         </div>
-    </div>
+        </div>
   
   
   <div id="video-grid"></div>
@@ -184,6 +184,7 @@
                     </ul>
                 </div>
             </div>
+   
             <div class="col-lg-4 mt-4 ad-info">
                 <h4 class="mb-4">Contact Info</h4>
                 <p><span class="fa fa-map-marker"></span>Plot 014/100 , Ggaba Rd, Bbunga
@@ -216,7 +217,6 @@
             <!-- move top -->
         </div>
     </div>
-
 </div>
 <!-- //copyright -->
 </body>
