--- a/views/room.ejs
+++ b/views/room.ejs
@@ -43,8 +43,9 @@
           <li><a href ="solutions.ejs"> Solutions </a></li>
           <li><a href ="products.ejs"> Products</a></li>
           <li><a href ="about.ejs"> About </a></li>
-          <li><a href ="contact.ejs"> Contact </a></li>
-          <li><a href ="projects.ejs"> Projects </a></li>
+          <li><a href ="contact.ejs"> Projects </a></li>
+          <em class="fas fa-user-plus"></em>
+          <li><a href ="projects.ejs"> Signin </a></li>
         </ul>
         <div class="burger">
           <div class="line1"></div>
