--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -23,13 +23,18 @@
             </a>African Health Store</h4>
 
     </div>
-    <ul>
-    <li><a href ="room.ejs"> Home </a></li>
+    <div class="header-input">
+        <input type="text">
+    </div>
+
+
+    <ul class="nav-links">
+        <li><a href ="room.ejs"> Home </a></li>
         <li><a href ="solutions.ejs"> Solutions </a></li>
         <li><a href ="products.ejs"> Products</a></li>
         <li><a href ="about.ejs"> About </a></li>
-        <li><a href ="contact.ejs"> Contact </a></li>
         <li><a href ="projects.ejs"> Projects </a></li>
+        <li><a href ="signin.ejs"> Signin </a></li>
     </ul>
     <div class="burger">
       <div class="line1"></div>
