--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -5,12 +5,18 @@
 }
 
 nav {
+  height: 80px;
+  object-fit: contain;
   display: flex;
   justify-content: space-around;
   align-items: center;
   min-height: 8vh;
   background-color: #5d4954;
   font-family: 'Poppins', sans-serif;
+  margin-right: 10px;
+  position: sticky;
+  top: 0;
+  z-index: 100;
 }
 
 .logo {
@@ -18,7 +24,30 @@ nav {
   text-transform: uppercase;
   letter-spacing: 5px;
   font-size: 20px;
+  margin-left: 20px;
 }
+
+.header-input {
+  display: flex;
+  align-items: center;
+  width: 20%;
+  /*border: 1px solid black;*/
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.header-input > input {
+  flex: 1;
+  border: none;
+  margin-right: 0;
+} 
+
+/*.header-input > em {
+  width: 50px;
+  background-color: #474747;
+  border-left: 1px solid lightgray;
+  color: gray;
+}*/
 
 .nav-links {
   display: flex;
@@ -183,7 +212,7 @@ video {
   flex: 0.2;
   display: flex;
   flex-direction: column;
-  background-color: #242424;
+  background-color: #2b2929;
   border-left: 1px solid #3d3d42;
 }
 
