--- a/views/room.ejs
+++ b/views/room.ejs
@@ -34,10 +34,11 @@
             <h4>
                 <a href="room.ejs" class="navbar-brand">
                   <span style="color: #cc0001; text-shadow: 2px 2px 4px rgba(0,0,0,0.3);">
-                    <img src="images/image.jpg" alt="African Health Store" class="logo">
+                    <img src="image.jpg" class="logo" alt="African Health Store">
+                    
                   </span>
                 </a>     
-              </h4>
+            </h4>
         </div>
         
         <div class="header-input">
@@ -50,8 +51,9 @@
           <li><em class="fab fa-product-hunt"></em><a href ="products.ejs"> Products</a></li>
           <li><em class="far fa-address-card"></em><a href ="about.ejs"> About </a></li>
           <li><em class="fas fa-tasks"></em><a href ="contact.ejs"> Projects </a></li>
-          <li><em class="fas fa-user-plus"></em><a href ="signin.ejs"> Signin </a></li>
+          <li><em class="fas fa-user-plus"></em><a href ="signin.ejs"> Login </a></li>
         </ul>
+
         <div class="burger">
           <div class="line1"></div>
           <div class="line2"></div>
