--- a/views/room.ejs
+++ b/views/room.ejs
@@ -33,13 +33,16 @@
         <div class="logo">
             <h4>
                 <a href="room.ejs" class="navbar-brand">
-                  <span style="color: #cc0001; text-shadow: 2px 2px 4px rgba(0,0,0,0.3);">
-                    <img src="image.jpg" class="logo" alt="African Health Store">
+                  <span style="color: #cc0001; text-shadow: 2px 2px 4px rgba(0,0,0,0.3);"></span>
+                    <img src="images/image.jpg" class="logo" alt="African Health Store">
                     
                   </span>
                 </a>     
             </h4>
         </div>
+
+
+
         
         <div class="header-input">
             <input type="text" placeholder="Search">
@@ -59,7 +62,7 @@
           <div class="line2"></div>
           <div class="line3"></div>
         </div>
-      </nav>
+    </nav>
     
     <div class="main">
         <div class="main__left">
